# lsblk-rs

./: Cargo.toml  README.md
.github/workflows/: release-crate.yml  rust.yml
src/: blockdevs.rs  lib.rs  mountpoints.rs  populate.rs
